# bellos

./: .gitignore  Cargo.toml  LICENSE  README.md  dependencies.bellande  dependencies.txt  make_rust_executable.bellos  make_rust_executable.sh  setup_bellos.py
bellos_scripts/: basic_math.bellos  control_structures.bellos  file_operations.bellos  functions.bellos  hello_world.bellos  string_manipulation.bellos
executable/: bellos
src/: bellos.rs  utilities.rs
src/executor/: executor.rs
src/executor_processes/: executor.rs  mod.rs  processes.rs
src/interpreter/: interpreter.rs
src/interpreter_logic/: interpreter.rs  logic.rs  mod.rs
src/lexer/: lexer.rs
src/parser/: parser.rs
src/shell/: shell.rs
src/utilities/: utilities.rs
